PZS-NG CHANGELOG
----------------

v1.2.0  --> 1.2.x :
		- Fix find_last_of and find_first_of crashing on NULL input
		- Forgotten mp3-to-audio textchange
		- change CHANGELOG to list newest at top
		- ^--- 2013 ---^
		- Bugfix for split AUDIO_* lines when garbage is in the ID3 fields
		- Rewrote and enhanced the stripping/trimming help functions
		- Bugfix for rescan where negative missing files and over 100% completion occured
		- Some fixes for the racedata and headdata files after rescan-runs
		- Cleanup, memleakfixes and preventive buffer overflow fixes for rescan
		- Fix forgotten part of sampledir checking code to work with commas
		- Update ignored_types, removed m3u from it to allow multi-cd m3u's
		- Fix allowed_genres and banned_genres (and any other list where items have a space)
		  having wrong matches. This causes sample_list to be a comma-seperated list
		  now, so update your zsconfig.h if you have that defined in there.
		- Rework internal speed handling and calculation
		- Improve stats-gathering for dayup/wkup/monthup/allup
		- Fix textual typo in glftpd.tcl
		- Updated video_types to contain .ts by default
		- Updated COOKIES file
		- Fixed libcopy.sh on 64bit systems not copying the correct resolvlibs
		- Fixed typo in docs regarding create_missing_sample_link
		- Added sample checking option to default zsconfig.h
		- Added vob, mov, mp4 and wmv to the default video_types and removed several from allowed_types
		- Updated the audio-genre script to use the same genres as in the zipscript
		- Added comments to ngBot.conf.default regarding max_log_change
		- Fixed bug #530: output problems for races with a lot of users
		- Fixed bug #532: halfway and newleader had wrong leader
		- Fixed bug in PreTime.tcl
		- Fixed bug whith sample_list in group_dirs and nocheck_dirs (Thanks to Auri for noticing)
		- Fixed linkererrors regarding FLAC libs
		- Fixed few inconsistencies in d3x0c.zst (Thanks to tr1t1um for noticing)